import { runAuthenticatedQuery } from "test/utils"

describe("Me", () => {
  describe("Conversation", () => {
    const rootValue = {
      conversationLoader: () => {
        return Promise.resolve({
          id: "420",
          initial_message: "Loved some of the works at your fair booth!",
          from_email: "collector@example.com",
          _embedded: {
            last_message: {
              snippet: "Cool snippet",
              from_email_address: "other-collector@example.com",
            },
          },
          items: [
            {
              item_type: "Artwork",
              item_id: "artwork-42",
              title: "Pwetty Cats",
              properties: {
                title: "Pwetty Cats",
                acquireable: true,
                artists: [
                  {
                    id: "artist-42",
                  },
                ],
              },
            },
            {
              item_type: "PartnerShow",
              item_id: "show-42",
              title: "Catty Show",
              properties: {
                is_reference: true,
                display_on_partner_profile: true,
              },
            },
          ],
        })
      },
      conversationMessagesLoader: () =>
        Promise.resolve({
          total_count: 4,
          message_details: [
            {
              id: "240",
              raw_text: "this is a good message",
              from_email_address: "fancy_german_person@posteo.de",
              from_id: null,
              attachments: [],
              metadata: {
                lewitt_invoice_id: "420i",
              },
              from: `"Percy Z" <percy@cat.com>`,
              body: "I'm a cat",
            },
            {
              id: "241",
              raw_text: "this is a good message",
              from_email_address: "postman@posteo.de",
              from_id: null,
              attachments: [],
              metadata: {},
              from: `"Bitty Z" <Bitty@cat.com>`,
              body: "",
            },
            {
              id: "242",
              raw_text: "this is a good message",
              from_email_address: "fancy_german_person+wunderbar@posteo.de",
              from_id: "user-42",
              attachments: [],
              metadata: {},
              from: `"Matt Z" <matt@cat.com>`,
              body: null,
            },
            {
              id: "243",
              raw_text: "this is a good message",
              from_email_address: "postman+wunderlich@posteo.de",
              from_id: "user-21",
              attachments: [],
              metadata: {},
              from: "<email@email.com>",
              deliveries: [
                {
                  opened_at: "2020-12-31T12:00:00+00:00",
                },
              ],
            },
          ],
        }),
    }

    it("returns a conversation", () => {
      const query = `
        {
          me {
            conversation(id: "420") {
              id
              initial_message
              from {
                email
              }
              messages(first: 10) {
                edges {
                  node {
                    id
                    is_invoice
                    is_from_user
                    from {
                      name
                      email
                    }
                    body
                    deliveries {
                      opened_at
                    }
                  }
                }
              }
            }
          }
        }
      `

      return runAuthenticatedQuery(query, rootValue).then(({ me: conversation }) => {
        expect(conversation).toMatchSnapshot()
      })
    })

    describe("concerning unread indicator", () => {
      it("returns the right unread status", () => {
        const query = `
          {
            me {
              conversation(id: "420") {
                is_last_message_to_user
                last_message_open
              }
            }
          }
        `

        const message = {
          message_details: [
            {
              deliveries: [{ email: "collector@example.com", opened_at: "2020-12-31T12:00:00+00:00" }],
            },
          ],
        }

        const customRootValue = Object.assign({}, rootValue, {
          conversationMessagesLoader: () => Promise.resolve(message),
        })

        return runAuthenticatedQuery(query, customRootValue).then(({ me: { conversation } }) => {
          expect(conversation).toMatchSnapshot()
        })
      })
    })

    describe("concerning items", () => {
      const query = `
        {
          me {
            conversation(id: "420") {
              items {
                title
                item {
                  __typename
                  ... on Artwork {
                    is_acquireable
                  }
                  ... on Show {
                    is_reference
                  }
                }
              }
            }
          }
        }
      `

      it("returns the conversation items", () => {
        return runAuthenticatedQuery(query, rootValue).then(({ me: { conversation: { items } } }) => {
          expect(items.length).toEqual(2)
          expect(items).toMatchSnapshot()
        })
      })

      it("doesnt return invalid items", () => {
        const customRootValue = Object.assign({}, rootValue, {
          // Get a copy of the conversation payload, mutate it, and return that instead.
          conversationLoader: () =>
            rootValue.conversationLoader().then(conversation => {
              const convo = conversation
              convo.items[0].properties = {}
              return convo
            }),
        })

        return runAuthenticatedQuery(query, customRootValue).then(({ me: { conversation: { items } } }) => {
          expect(items.length).toEqual(1)
          expect(items).toMatchSnapshot()
        })
      })
    })
  })
})
